fix(tab bar): prevent tab bar layout shift when no tab is selected

--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -14,11 +14,15 @@
       @apply sr-only;
     }
 
+    &::after {
+      @apply content-[''] block w-10 h-[2.5px] bg-transparent rounded-full mt-0.5 -mb-1;
+    }
+
     &.tab-link-active {
       @apply text-indigo-600 dark:text-indigo-500 hover:text-indigo-500 dark:hover:text-indigo-600;
 
       &::after {
-        @apply content-[''] block w-10 h-[2.5px] bg-current rounded-full mt-0.5 -mb-1;
+        @apply bg-current;
       }
     }
   }
